--- a/webdriverbasics/pom.xml
+++ b/webdriverbasics/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>htmlunit-driver</artifactId>
             <version>2.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
